# Like-Gallery

./: README.md  run.cmd  run.sh
Old_Code/: drop_autonumber_daemon.py  fix_bad_image_names.py
sia-desktop/: LICENSE  README.md  gallery.html  pyproject.toml
sia-desktop/scripts/: build_win.ps1  dev_run.bat  installer.iss
sia-desktop/src/sia/: __init__.py  app.py
sia-desktop/src/sia/core/: __init__.py  config.py  db.py  indexer.py  logger.py  renamer.py  watcher.py
sia-desktop/src/sia/integration/: repair_wizard.py  scheduler_win.py
sia-desktop/src/sia/server/: __init__.py  api.py  downloader.py
sia-desktop/src/sia/ui/: main_window.py  resources.qrc
sia-desktop/tests/: test_api.py  test_downloader.py  test_indexer.py  test_server_static.py
