[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sia-desktop"
version = "0.1.0"
description = "Social Image Archiver desktop application"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SIA Team", email = "support@example.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "sqlalchemy>=2.0",
    "sqlalchemy-utils>=0.41",
    "pydantic>=1.10",
    "pyyaml>=6.0",
    "requests>=2.31",
    "watchdog>=3.0",
    "aiofiles>=23.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "PySide6>=6.6",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "Q", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src"]
